@@ -23,8 +23,8 @@
             <dt><code>com.sun.ws.rest.samples.optimisticconcurrency.resources.ItemResource</code></dt>
             <dd>This resource class provides meta-data information on the URIs to content resources 
                 that can be read and updated. JAXB is used to represent the meta-data as an XML document.
-                The resource statically references the ItemContentResource resource using the 
-                SubResources annotation declared on the class.
+                The resource references the ItemContentResource resource using the 
+                UriTemplate annotation declared on the ItemResource.getItemContentResource method.
             </dd>
             <dt><code>com.sun.ws.rest.samples.optimisticconcurrency.resources.ItemContentResource</code></dt>
             <dd>This resource class provides read and update ccess to the content. In this example, the
