@@ -24,8 +24,9 @@
             <dd>This Java class provides the Feed Document describing the Atom Entries
                 in the feed. It also provides support to create Atom Entries and
                 Atom Media Link Entries.
-                The resource statically references the EntryResource and EditEntryResource resources
-                using the SubResources annotation declared on the class.
+                The resource references the EntryResource and EditEntryResource resources
+                using the UriTemplate annotation declared on the FeedResource.getEntryResource and 
+                FeedResource.getEditEntryResource methods respectively.
             </dd>
             <dt><code>com.sun.ws.rest.samples.atomserver.resources.EntryResource</code></dt>
             <dd>This Java class supports the reading of an Atom Entry or Atom Media Link Entry.
