@@ -18,8 +18,8 @@
           <dd>A resource class that can produce two different representations of a 
           list of colors. The list can be filtered by a client-supplied query 
           parameter.
-          The resource statically references the Form resource using the 
-          SubResources annotation declared on the class.
+          The resource references the Form resource using the 
+          UriTemplate annotation declared on the Colours.getColours method.          
           </dd>
           <dt><code>com.sun.ws.rest.samples.console.resource.Form</code></dt>
           <dd>A resource class that produces a form in response to an HTTP GET,
