@@ -23,8 +23,8 @@
         </p><dl>
             <dt><code>com.sun.ws.rest.samples.storageservice.resources.ContainersResource</code></dt>
             <dd>This Java class provides meta-data information on the containers.
-                The resource statically references the ContainerResource resource using the 
-                SubResources annotation declared on the class.
+                The resource references the ContainerResource resource using the 
+                UriTemplate annotation declared on the ContainersResource.getContainerResource method.
             </dd>
             <dt><code>com.sun.ws.rest.samples.storageservice.resources.ContainerResource</code></dt>
             <dd>This Java class provides read, create and delete of a container.
