@@ -26,17 +26,25 @@ import com.sun.ws.rest.samples.storageservice.Containers;
 import com.sun.ws.rest.samples.storageservice.MemoryStore;
 import javax.ws.rs.HttpMethod;
 import javax.ws.rs.ProduceMime;
-import javax.ws.rs.SubResources;
 import javax.ws.rs.UriTemplate;
+import javax.ws.rs.core.HttpContext;
+import javax.ws.rs.core.PreconditionEvaluator;
+import javax.ws.rs.core.UriInfo;
 
 /**
  *
  * @author Paul.Sandoz@Sun.Com
  */
 @UriTemplate("/containers")
-@SubResources({ContainerResource.class})
 @ProduceMime("application/xml")
 public class ContainersResource {
+    @HttpContext UriInfo uriInfo;
+    @HttpContext PreconditionEvaluator preconditionEvaluator;
+    
+    @UriTemplate("{container}")
+    public ContainerResource getContainerResource() {
+        return new ContainerResource(uriInfo, preconditionEvaluator);
+    }
     
     @HttpMethod
     public Containers getContainers() {
